force-app/main/default/objects/Chargebee_Config__c/fields/CB_Primary__c.field-meta.xml
<CustomField>
    <fullName>CB_Primary__c</fullName>
    <description>Primary query condition for Chargebee</description>
    <label>CB Primary</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>