force-app/main/default/objects/Chargebee_Config__c/fields/ChargeBee_URL__c.field-meta.xml
<CustomField>
    <fullName>ChargeBee_URL__c</fullName>
    <description>Chargebee connected site URL</description>
    <label>ChargeBee_URL</label>
    <type>Url</type>
</CustomField>